--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -128,6 +128,15 @@
 
         </LinearLayout>
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/errorText"
+            android:layout_marginLeft="20dp"
+            android:textSize="15sp"
+            android:textColor="@color/black"/>
+
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
