--- a/app/src/main/res/layout/activity_add_accessroies.xml
+++ b/app/src/main/res/layout/activity_add_accessroies.xml
@@ -19,88 +19,129 @@
         android:layout_marginBottom="20dp"
         android:contentDescription="Select Image" />
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background"
-        android:orientation="vertical"
-        android:layout_below="@+id/accessImages"
-        android:layout_margin="10dp"
-        android:layout_marginTop="30dp">
+        android:layout_below="@+id/accessImages">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="@drawable/background"
+            android:orientation="vertical"
+            android:layout_below="@+id/accessImages"
+            android:layout_margin="10dp"
+            android:layout_marginTop="30dp">
 
-            <TextView
-
-                android:layout_width="120dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Color : "
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:layout_marginTop="10dp"
-                android:gravity="center"/>
+                android:orientation="horizontal">
 
-            <Spinner
-                android:layout_width="0dp"
-                android:layout_height="65dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:textAlignment="center"
-                android:id="@+id/colorSpinnerAccess"
-                android:layout_marginEnd="30dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"/>
+                <TextView
+
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:text="Color : "
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"/>
+
+                <Spinner
+                    android:layout_width="0dp"
+                    android:layout_height="65dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:id="@+id/colorSpinnerAccess"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"/>
+
+            </LinearLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_marginTop="10dp"
+                android:id="@+id/AccessId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background"
+                android:hint="Access Id">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtAccessId"
+                    android:textColor="@color/black"
+                    android:background="@drawable/background"
+                    android:inputType="text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_marginTop="10dp"
+                android:id="@+id/AccessSpecification"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background"
+                android:hint="Specification">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtAccessSpecification"
+                    android:textColor="@color/black"
+                    android:background="@drawable/background"
+                    android:inputType="text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_marginTop="10dp"
+                android:id="@+id/AccessPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background"
+                android:hint="Access Price">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtAccessPrice"
+                    android:inputType="numberDecimal"
+                    android:textColor="@color/black"
+                    android:background="@drawable/background"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_marginTop="10dp"
+                android:id="@+id/AccessQuentity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background"
+                android:hint="Quentity">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/edtAccessQuentity"
+                    android:inputType="numberDecimal"
+                    android:textColor="@color/black"
+                    android:background="@drawable/background"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:ignore="TouchTargetSizeCheck" />
+
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_marginTop="10dp"
-            android:id="@+id/AccessSpecification"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background"
-            android:hint="Specification">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtAccessSpecification"
-                android:textColor="@color/black"
-                android:background="@drawable/background"
-                android:inputType="text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:ignore="TouchTargetSizeCheck" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_marginTop="10dp"
-            android:id="@+id/AccessPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/background"
-            android:hint="Access Price">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/edtAccessPrice"
-                android:inputType="numberDecimal"
-                android:textColor="@color/black"
-                android:background="@drawable/background"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:ignore="TouchTargetSizeCheck" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-    </LinearLayout>
-
+    </ScrollView>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/addAccessButton"
